# mcp-md-table-formatter

./: README.md  pyproject.toml  server.py
docs/: mcp-md-table-formatter-plan.md  why-mcp.md
tests/: test_formatter.py
