[project]
name = "md-table-formatter"
version = "0.1.0"
description = "MCP server to format Markdown tables with CJK-aware column alignment"
requires-python = ">=3.12"
dependencies = ["mcp"]

[project.scripts]
md-table-formatter = "server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest"]
